force-app/main/default/objects/DireccionesAlter__c/DireccionesAlter__c.object-meta.xml
<CustomObject>
    <label>Direcciones Alternas</label>
    <nameField>
        <displayFormat>DIR-ALT-{0000000000}</displayFormat>
        <label>Nombre de Direcciones Alternas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones Alternas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>