force-app/main/default/objects/DireccionesAlter__c/fields/ADDRESSLINE1__c.field-meta.xml
<CustomField>
    <fullName>ADDRESSLINE1__c</fullName>
    <label>ADDRESSLINE1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>