force-app/main/default/objects/DireccionesAlter__c/fields/ADDRESSLINE2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESSLINE2__c</fullName>
    <label>ADDRESSLINE2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>