force-app/main/default/objects/DireccionesAlter__c/fields/ADDRESSLINE3__c.field-meta.xml
<CustomField>
    <fullName>ADDRESSLINE3__c</fullName>
    <label>ADDRESSLINE3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>