force-app/main/default/objects/DireccionesAlter__c/fields/CIUDAD__c.field-meta.xml
<CustomField>
    <fullName>CIUDAD__c</fullName>
    <label>Nombre de la ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>