force-app/main/default/objects/DireccionesAlter__c/fields/Ciudad_UDC__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Departamento</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Direcciones Alternas (Ciudad)</relationshipLabel>
    <relationshipName>Direcciones_Alternas3</relationshipName>
    <type>Lookup</type>
</CustomField>