force-app/main/default/objects/DireccionesAlter__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones Alternas</relationshipLabel>
    <relationshipName>Direcciones_Alternas</relationshipName>
    <type>Lookup</type>
</CustomField>