force-app/main/default/objects/DireccionesAlter__c/fields/CODDEPARTAMENTO__c.field-meta.xml
<CustomField>
    <fullName>CODDEPARTAMENTO__c</fullName>
    <label>Codigo del departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>