force-app/main/default/objects/DireccionesAlter__c/fields/CODMUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>CODMUNICIPIO__c</fullName>
    <label>Codigo del municipio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>