force-app/main/default/objects/DireccionesAlter__c/fields/contactaddresstypecode__c.field-meta.xml
<CustomField>
    <fullName>contactaddresstypecode__c</fullName>
    <label>Tipo de dirección</label>
    <length>50</length>
    <type>Text</type>
</CustomField>