force-app/main/default/objects/DireccionesAlter__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Direcciones Alternas</relationshipLabel>
    <relationshipName>Direcciones_Alternas</relationshipName>
    <type>Lookup</type>
</CustomField>