force-app/main/default/objects/DireccionesAlter__c/fields/COUNTYCODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTYCODE__c</fullName>
    <label>COUNTYCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>