force-app/main/default/objects/DireccionesAlter__c/fields/dateupdated__c.field-meta.xml
<CustomField>
    <fullName>dateupdated__c</fullName>
    <label>Fecha de creacion y/o actualizacion</label>
    <type>Date</type>
</CustomField>