force-app/main/default/objects/DireccionesAlter__c/fields/OTHERADDRESSLINEA1__c.field-meta.xml
<CustomField>
    <fullName>OTHERADDRESSLINEA1__c</fullName>
    <label>Direccion del cliente linea 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>