force-app/main/default/objects/DireccionesAlter__c/fields/OTHERADDRESSLINEA2__c.field-meta.xml
<CustomField>
    <fullName>OTHERADDRESSLINEA2__c</fullName>
    <label>Direccion del cliente linea 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>