force-app/main/default/objects/DireccionesAlter__c/fields/OTHERADDRESSLINEA3__c.field-meta.xml
<CustomField>
    <fullName>OTHERADDRESSLINEA3__c</fullName>
    <label>Direccion del cliente linea 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>