force-app/main/default/objects/DireccionesAlter__c/fields/SEQUENCEADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCEADDRESS__c</fullName>
    <label>Secuencia de dirección con la principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>