force-app/main/default/objects/DireccionesAlter__c/fields/SEQUENCEOTHERADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCEOTHERADDRESS__c</fullName>
    <label>Secuencia de la direccion alternativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>