force-app/main/default/objects/DireccionesAlter__c/fields/STATECODE__c.field-meta.xml
<CustomField>
    <fullName>STATECODE__c</fullName>
    <label>STATECODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>