force-app/main/default/objects/DireccionesAlter__c/fields/statename__c.field-meta.xml
<CustomField>
    <fullName>statename__c</fullName>
    <label>Nombre del departamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>