force-app/main/default/objects/DireccionesAlter__c/fields/Tipo_de_direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_direcci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencias: Business, Home, Office, Other, Work</inlineHelpText>
    <label>Tipo de dirección</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipo de Direccion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Direcciones Alternas (Tipo de dirección)</relationshipLabel>
    <relationshipName>Direcciones_Alternas4</relationshipName>
    <type>Lookup</type>
</CustomField>