force-app/main/default/objects/DireccionesAlter__c/fields/Tipo_de_direcci_n_existe__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_direcci_n_existe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipo de dirección existe</label>
    <type>Checkbox</type>
</CustomField>