force-app/main/default/objects/DireccionesAlter__c/fields/TYPEOTHERADDRESS__c.field-meta.xml
<CustomField>
    <fullName>TYPEOTHERADDRESS__c</fullName>
    <label>Tipo de direccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>