force-app/main/default/objects/DireccionesAlter__c/validationRules/Cambio_de_Tipo_de_Direccion.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_de_Tipo_de_Direccion</fullName>
    <active>true</active>
    <description>Si se cambia el tipo de direccion el JD detecta una creacion y no modificacion</description>
    <errorConditionFormula>ISCHANGED( Tipo_de_direcci_n__c )</errorConditionFormula>
    <errorDisplayField>Tipo_de_direcci_n__c</errorDisplayField>
    <errorMessage>No puede cambiarse el tipo de dirección</errorMessage>
</ValidationRule>